# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CCamera.hpp  CGame.hpp  CGameboard.hpp
src/: CCamera.cpp  CGame.cpp  CGameBoard.cpp  main.cpp
